package parsing;

import justificationDiagram.JustificationDiagram;

public interface Initializer {
    JustificationDiagram create(String file);
}
