@startuml
!include commons.style

title Justification Diagram Compiler (Junctions)
center footer ACE - Corinne Pulgar

package antlr4.parsing {

    interface JustificationDiagramVisitor {
         + visitDiagram()
         + visitDeclaration()
         + visitRelation()
         + visitInstruction()
         + visitElement()
         + visitConclusion()
    }

    class JustificationDiagramBaseVisitor { }

}

package sablecc.syntax {

    interface Analysis {
        + caseADiagram()
        + caseADeclaration()
        + caseARelation()
        + caseAInstruction()
        + caseAElement()
        + caseAConclusion()
    }

    class AnalysisAdapter { }

    class DepthFirstAdapter { }

}

package parsing {

    interface Initializer { }

    interface Linker { }

    class AntlrInitializer { }

    class AntlrLinker { }

    class SableccInitializer { }

    class SableccLinker { }

}

package justificationDiagram {

    class JustificationDiagram { }

}

    AnalysisAdapter .up.|> Analysis
    DepthFirstAdapter .up.|> AnalysisAdapter
    JustificationDiagramBaseVisitor -.up.|> JustificationDiagramVisitor
    AntlrInitializer -up-|> JustificationDiagramBaseVisitor
    AntlrLinker -up-|> JustificationDiagramBaseVisitor
    AntlrInitializer .up.|> Initializer
    AntlrLinker -.up.|> Linker
    SableccInitializer -.up.|> Initializer
    SableccLinker -.up.|> Linker
    SableccInitializer -up-|> DepthFirstAdapter
    SableccLinker -up-|> DepthFirstAdapter
    Linker o-- JustificationDiagram
    Initializer o-- JustificationDiagram

@enduml